🔒 Security: Fix API key exposure and regenerate key
🚨 Security Fixes:
- Remove API key value from GitHub Actions console logs
- Create script to regenerate API keys securely
- API key values are now only stored in AWS SSM (encrypted)
- Update deployment summary to not expose sensitive values

🔑 API Key Management:
- New API key generated: glr4zjfiib
- Old exposed API key has been invalidated and deleted
- Key securely stored in SSM: /homepage/prod/client-api-key
- Use scripts/get-api-key.sh to retrieve key value when needed

🛡️ Security Best Practices:
- Never log sensitive values in CI/CD
- Rotate API keys when compromised
- Store secrets in encrypted parameter store
- Provide secure retrieval mechanisms

The previously exposed API key is now invalid and has been replaced.

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -319,13 +319,12 @@ jobs:
             
             echo "✅ API Key stored in SSM: /homepage/prod/client-api-key"
             echo "🔑 API Key ID: $API_KEY_ID"
-            echo "🔑 API Key Value: $API_KEY_VALUE"
             
-            # Also save to GitHub step summary for easy access
+            # Also save to GitHub step summary for easy access (without exposing the value)
             echo "## 🔑 API Key Information" >> $GITHUB_STEP_SUMMARY
             echo "- **API Key ID:** \`$API_KEY_ID\`" >> $GITHUB_STEP_SUMMARY
-            echo "- **API Key Value:** \`$API_KEY_VALUE\`" >> $GITHUB_STEP_SUMMARY
             echo "- **SSM Parameter:** \`/homepage/prod/client-api-key\`" >> $GITHUB_STEP_SUMMARY
+            echo "- **Retrieval:** Use \`scripts/get-api-key.sh\` to get the key value securely" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
           else
             echo "❌ Could not extract API Key ID from CDK outputs"
